# src/modules/user/user.controller.ts
@@ -1,4 +1,7 @@
+import { Role } from '@prisma/client';
 import { Request, Response } from 'express';
+
+import { DEFAULT_ROLE_PERMISSIONS } from '../auth/auth.constant';
 
 import prisma from '@/config/prisma';
 import tokenService from '@/services/token.service';
@@ -107,12 +110,20 @@ async function createUser(req: Request, res: Response) {
 
   const hashed = await tokenService.hash(data.password);
 
+  const config = DEFAULT_ROLE_PERMISSIONS[data.role as Role];
+
   const newUser = await prisma.user.create({
     data: {
       name: data.name,
       email: data.email,
       password: hashed,
       role: data.role,
+      permissionGroups: {
+        connect: config.groups.map((name) => ({ name })),
+      },
+      permissions: {
+        connect: config.permissions.map((id) => ({ key: id })),
+      },
     },
   });
 
